@@ -1,7 +1,8 @@
 Post-v2.0.0
 ---------------------
-    - Log files now report times with millisecond resolution.  (Previous
-      versions only reported whole seconds.)
+    - Log file timestamps and ovsdb commit timestamps are now reported
+      with millisecond resolution.  (Previous versions only reported
+      whole seconds.)
 
 
 v2.0.0 - xx xxx xxxx
